the website is now starting to be mine

--- a/SOG/index.html
+++ b/SOG/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Speech API - Text To Speech App</title>
+    <title>Speaker of God</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Header -->
     <header class="header">
-      <h1>🎧 Web Speech API - Text To Speech App</h1>
+      <h1>🎧 Speaker of God - TTS</h1>
     </header>
 
     <!-- Main Container -->
@@ -99,7 +99,7 @@
     <!-- Footer -->
     <footer class="footer">
       <p>
-        Built with ❤️ by Dharma Jethva |
+        Current build by Mikel Torres | Original by Dharma Jethva at
         <a href="https://www.codedex.io/" target="_blank">Codédex</a>
       </p>
     </footer>
